apport (1.2.1-0ubuntu3) UNRELEASED; urgency=low

  * debian/control: Bump Standards-Version to 3.8.1 (no changes necessary).
  * debian/control: Bump debhelper dependency for dh_icons, to satisfy
    lintian.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 02 Jun 2009 12:04:05 +0200

apport (1.2.1-0ubuntu2) karmic; urgency=low

  * debian/control: Update Vcs-Bzr: for new location (moved from project
    branch to package branch).
  * Merge bug fixes from trunk:
    - apport-cli: Fix report saving in "bug report" mode. (LP: #353253)
    - Drop "UnsupportableReason" field, it is too similar to
      UnreportableReason and just confusing.
    - ui.py: Check UnreportableReason for run_report_bug() as well.
      (LP: #361359)
    - general-hooks/generic.py: Do not report problems with low free space on
      / or /home. (LP: #381047)
    - launchpad.py: Do not overwrite report['Title'].
    - launchpad.py: Repair support for extra tags.
    - New function apport.hookutils.root_command_output() to run a command as
      root, through gksu/kdesudo/sudo, depending on the desktop environment.
      (Part of UbuntuSpec:desktop-karmic-symptom-based-bug-reporting)
    - launchpad.py: Fetch DpkgTerminalLog. (LP: #382589)
    - launchpad.py: More robust download(), fixes other part of (LP: #382589)
    - problem_report.py: Allow dashes and underscores in key names. Update
      doc/data-format.tex accordingly. (LP: #380811)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 02 Jun 2009 11:59:41 +0200

apport (1.2.1-0ubuntu1) karmic; urgency=low

  * New upstream release:
    - Moving away from deprecated APIs:
      + packaging-apt-dpkg.py: Use python-apt >= 0.7.9 official API and drop
        usage of internal symbols.
      + hookutils.py: Drop hal related functions and queries, replace with
        udev database, udev log file, and DMI information from sysfs.
      + gtk UI: Convert from libglade to gtk.Builder.
    - Bug fixes: